@@ -1,6 +1,6 @@
 /* Python interface to program spaces.
 
-   Copyright (C) 2010-2013 Free Software Foundation, Inc.
+   Copyright (C) 2010 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -34,9 +34,6 @@ typedef struct
 
   /* The pretty-printer list of functions.  */
   PyObject *printers;
-
-  /* The type-printer list.  */
-  PyObject *type_printers;
 } pspace_object;
 
 static PyTypeObject pspace_object_type;
@@ -56,7 +53,7 @@ pspy_get_filename (PyObject *self, void *closure)
     {
       struct objfile *objfile = obj->pspace->symfile_object_file;
 
-      if (objfile)
+      if (objfile && objfile->name)
 	return PyString_Decode (objfile->name, strlen (objfile->name),
 				host_charset (), NULL);
     }
@@ -69,8 +66,7 @@ pspy_dealloc (PyObject *self)
   pspace_object *ps_self = (pspace_object *) self;
 
   Py_XDECREF (ps_self->printers);
-  Py_XDECREF (ps_self->type_printers);
-  Py_TYPE (self)->tp_free (self);
+  self->ob_type->tp_free (self);
 }
 
 static PyObject *
@@ -84,13 +80,6 @@ pspy_new (PyTypeObject *type, PyObject *args, PyObject *keywords)
 
       self->printers = PyList_New (0);
       if (!self->printers)
-	{
-	  Py_DECREF (self);
-	  return NULL;
-	}
-
-      self->type_printers = PyList_New (0);
-      if (!self->type_printers)
 	{
 	  Py_DECREF (self);
 	  return NULL;
@@ -132,48 +121,6 @@ pspy_set_printers (PyObject *o, PyObject *value, void *ignore)
   tmp = self->printers;
   Py_INCREF (value);
   self->printers = value;
-  Py_XDECREF (tmp);
-
-  return 0;
-}
-
-/* Get the 'type_printers' attribute.  */
-
-static PyObject *
-pspy_get_type_printers (PyObject *o, void *ignore)
-{
-  pspace_object *self = (pspace_object *) o;
-
-  Py_INCREF (self->type_printers);
-  return self->type_printers;
-}
-
-/* Set the 'type_printers' attribute.  */
-
-static int
-pspy_set_type_printers (PyObject *o, PyObject *value, void *ignore)
-{
-  PyObject *tmp;
-  pspace_object *self = (pspace_object *) o;
-
-  if (! value)
-    {
-      PyErr_SetString (PyExc_TypeError,
-		       "cannot delete the type_printers attribute");
-      return -1;
-    }
-
-  if (! PyList_Check (value))
-    {
-      PyErr_SetString (PyExc_TypeError,
-		       "the type_printers attribute must be a list");
-      return -1;
-    }
-
-  /* Take care in case the LHS and RHS are related somehow.  */
-  tmp = self->type_printers;
-  Py_INCREF (value);
-  self->type_printers = value;
   Py_XDECREF (tmp);
 
   return 0;
@@ -221,13 +168,6 @@ pspace_to_pspace_object (struct program_space *pspace)
 	      return NULL;
 	    }
 
-	  object->type_printers = PyList_New (0);
-	  if (!object->type_printers)
-	    {
-	      Py_DECREF (object);
-	      return NULL;
-	    }
-
 	  set_program_space_data (pspace, pspy_pspace_data_key, object);
 	}
     }
@@ -239,14 +179,13 @@ void
 gdbpy_initialize_pspace (void)
 {
   pspy_pspace_data_key
-    = register_program_space_data_with_cleanup (NULL, py_free_pspace);
+    = register_program_space_data_with_cleanup (py_free_pspace);
 
   if (PyType_Ready (&pspace_object_type) < 0)
     return;
 
   Py_INCREF (&pspace_object_type);
-  PyModule_AddObject (gdb_module, "Progspace",
-		      (PyObject *) &pspace_object_type);
+  PyModule_AddObject (gdb_module, "Progspace", (PyObject *) &pspace_object_type);
 }
 
 
@@ -257,14 +196,13 @@ static PyGetSetDef pspace_getset[] =
     "The progspace's main filename, or None.", NULL },
   { "pretty_printers", pspy_get_printers, pspy_set_printers,
     "Pretty printers.", NULL },
-  { "type_printers", pspy_get_type_printers, pspy_set_type_printers,
-    "Type printers.", NULL },
   { NULL }
 };
 
 static PyTypeObject pspace_object_type =
 {
-  PyVarObject_HEAD_INIT (NULL, 0)
+  PyObject_HEAD_INIT (NULL)
+  0,				  /*ob_size*/
   "gdb.Progspace",		  /*tp_name*/
   sizeof (pspace_object),	  /*tp_basicsize*/
   0,				  /*tp_itemsize*/
